--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
