--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
@@ -24,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
