--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
