--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@headlessui/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
-    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
